update files and folder

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <nav>
                 <div class="container">
                     <div class="nav-wrapper">
-                        <img src="/logo-navbar.png" alt="logo">
+                        <img src="./img/logo-navbar.png" alt="logo">
                         <ul>
                             <li>Features</li>
                             <li>How It Works</li>
@@ -31,7 +31,7 @@
                 <div class="container">
                     <div class="banner-wrapper">
                         <div class="early">
-                            <img src="/icon.png" alt="icon">
+                            <img src="./img/icon.png" alt="icon">
                             <button>Early Access Now Open</button>
                         </div>
                         <h1>Structured thinking,<span>not just note-taking.</span></h1>
@@ -55,22 +55,22 @@
                     </div>
                     <div class="all-card">
                         <div class="card1">
-                            <img src="/notes.png" alt="note">
+                            <img src="./img/notes.png" alt="note">
                             <h3>Scattered notes</h3>
                            <P> Your ideas live in 10 different apps, none of them connected.</P>
                         </div>
                         <div class="card1">
-                            <img src="/Bookmarks.png" alt="Bookmarks">
+                            <img src="./img/bookmarks.png" alt="Bookmarks">
                             <h3>Bookmark overload</h3>
                            <P> Hundreds of saved links you'll never revisit or remember.</P>
                         </div>
                         <div class="card1">
-                            <img src="/Brain.png" alt="Brain">
+                            <img src="./img/brain.png" alt="Brain">
                             <h3>No idea connections</h3>
                           <p>  Your ideas live in 10 different apps, none of them connected.</p> 
                         </div>
                         <div class="card1">
-                            <img src="/Info.png" alt="Info">
+                            <img src="./img/Info.png" alt="Info">
                             <h3>Forgetting whatyou learned</h3>
                            <p>Knowledge fades because there's no system to retain it.</p>
                         </div>
@@ -83,17 +83,17 @@
                 <div class="container">
                     <div class="solution-wrapper">
                         <div class="left-part">
-                            <img src="/knowledge.png" alt="knowledge">
+                            <img src="./img/knowledge.png" alt="knowledge">
                         </div>
                         <div class="right-part">
                             <h5>The Solution</h5>
                             <h2>Your second brain, structured by design.</h2>
                             <p>Personal Knowledge Vault isn't another note-taking app. It's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding.</p>
                                 <ul>
-                                  <li><img src="/CheckCircle.png" alt="CheckCircle"> <h6>Capture ideas with structure built-in from day one</h6></li>
-                                  <li><img src="/CheckCircle.png" alt="CheckCircle"> <h6>Connect related concepts automatically as you write</h6></li>
-                                  <li><img src="CheckCircle.png" alt="CheckCircle"> <h6>Build lasting knowledge through reflection prompts</h6></li>
-                                  <li><img src="/CheckCircle.png" alt="CheckCircle"> <h6>Find anything instantly with semantic search</h6></li>
+                                  <li><img src="./img/checkcircle.png" alt="CheckCircle"> <h6>Capture ideas with structure built-in from day one</h6></li>
+                                  <li><img src="./img/checkcircle.png" alt="CheckCircle"> <h6>Connect related concepts automatically as you write</h6></li>
+                                  <li><img src="./img/checkcircle.png" alt="CheckCircle"> <h6>Build lasting knowledge through reflection prompts</h6></li>
+                                  <li><img src="./img/checkcircle.png" alt="CheckCircle"> <h6>Find anything instantly with semantic search</h6></li>
                                 </ul>
                         </div>
                     </div>
@@ -118,7 +118,7 @@
                 <section id="footer">
                     <div class="container">
                        <div class="footer-wrapper">
-                        <img src="/logo-footer.png" alt="footer">
+                        <img src="./img/logo-footer.png" alt="footer">
                         <div class="icon">
                             <h3>Social Links</h3>
                             <ul>
